--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-style">Book Now</button>
+            <button class="btn-style" onclick="my_button_click_handler()">Book Now</button>
         </div>
 
         <div class="booking-content">
@@ -147,7 +147,7 @@
             function calculateTotal() {
                 const economyInput = document.getElementById('economy-count');
                 const economyCount = parseInt(economyInput.value);
-                
+
                 const fClassCount = getInputValue('fClass');
                 // subtotal statement
                 const subtotalPrice = economyCount * 100 + fClassCount * 150;
@@ -166,6 +166,12 @@
                 const ticketsInput = document.getElementById(tickets + '-count');
                 const ticketsCount = parseInt(ticketsInput.value);
                 return ticketsCount;
+            }
+
+            // submit alert function
+
+            function my_button_click_handler() {
+                alert('Your form is submitted successfully');
             }
 
         </script>
